2007-03-07  Jeffrey Stedfast  <fejj@novell.com>

	* Gui/CSharpTextEditorExtension.cs (KeyPress): Same sort of fix as
	earlier wrt the user hitting Tab. If the user hits <Enter> and the
	base class does not insert a '\n', then it means the user has just
	accepted an auto-completed selection. In this case, return -
	there's nothing left for us to do.

	* FormattingStrategy/CSharpIndentEngineStack.cs (Push): Added a
	work-around for pushing a multi-line anonmymous method {} block
	inside a ParenList (e.g. as a callback argument).

	* FormattingStrategy/CSharpIndentEngine.cs (PushHash): Doh, how
	did I overlook this method when integrating my IndentEngine into
	MD?
	(PushNewLine): Properly handle multi-line array assignments.

	Fix for making "default :" (as opposed to "default:") inside a
	switch-statement work as it should, lwsp is not significant here.

	* FormattingStrategy/CSharpIndentEngine.cs (PushOpenParen): Clear
	the keyword after pushing a new ParenList onto the stack, when the
	ParenList is popped, the keyword is restored.
	(Reset): Changed the semantics of wordStart, this now initializes
	to -1 instead of 0.
	(PushNewLine): Reset wordStart back to -1.
	(Push): When checking for a keyword, we don't need to use
	lastNonLwsp anymore, just use wordStart.
	(Push): wordStart should always be set to point to the beginning
	of a word token (and never to word-delimiting chars like it was
	before).

2007-03-07  Jeffrey Stedfast  <fejj@novell.com>

	* Gui/CSharpTextEditorExtension.cs (KeyPress): Fixed a bug
	preventing tab-completion from working by chaining the KeyPress()
	to the parent.

2007-03-07  Jeffrey Stedfast  <fejj@novell.com>

	* FormattingStrategy/CSharpIndentEngine.cs: Fixed bug #81065 by
	looking at the last significant char on the line. Also now keeping
	the last char typed as part of the state so as to avoid having to
	linebuf.ToString() and then look.

2007-03-06  Jeffrey Stedfast  <fejj@novell.com>
